<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    <com.huodong.im.chatdemo.view.UserDefineScrollView 
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout 
        android:id="@+id/date_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_gap"
        >
         <TextView 
            android:id="@+id/gender_limit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_gender"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        />
         <LinearLayout 
             
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
             <TextView 
            android:id="@+id/gender_limit_no"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_gender_no"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
             <View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/gender_limit_women"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_gender_women"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/gender_limit_men"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_gender_men"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
         <TextView 
            android:id="@+id/fees_limit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        />
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
             <TextView 
            android:id="@+id/fees_limit_all"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees_all"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
             <View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/fees_limit_sponsor"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees_sponsor"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/fees_limit_men_a"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees_men_a"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
         <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/margin_gap_bigger"
            android:layout_marginRight="@dimen/margin_gap_bigger"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
         	<TextView 
            android:id="@+id/fees_limit_aa"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees_aa"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/fees_limit_partner"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_fees_partner"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
         
         <TextView 
            android:id="@+id/time_limit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_date_time"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        />
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
             <TextView 
            android:id="@+id/time_limit_all"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_date_all"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
             <View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/time_limit_today"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_date_today"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	
         </LinearLayout>
         <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/margin_gap_bigger"
            android:layout_marginRight="@dimen/margin_gap_bigger"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
         	<TextView 
            android:id="@+id/time_limit_tommorrow"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_date_tomorrow"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/time_limit_week"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_date_week"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
         
    </LinearLayout>
    
     <LinearLayout 
        android:id="@+id/user_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_gap"
        >
         <TextView 
            android:id="@+id/gender_user"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_gender"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        />
         <LinearLayout 
             
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
             <TextView 
            android:id="@+id/gender_user_all"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_gender_no"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
             <View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/gender_user_women"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_gender_women"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/gender_user_men"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_gender_men"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
         <TextView 
            android:id="@+id/active_limit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_active"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        />
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
             <TextView 
            android:id="@+id/active_limit_no"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_active_no"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
             <View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/active_limit_one"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_active_one"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	
         </LinearLayout>
         <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/margin_gap_bigger"
            android:layout_marginRight="@dimen/margin_gap_bigger"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="horizontal"
             >
         	<TextView 
            android:id="@+id/active_limit_three"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_active_three"
        	android:paddingTop="@dimen/margin_gap"
        	android:paddingBottom="@dimen/margin_gap"
        	android:textSize="@dimen/text_size_little"
        	/>
         	<View 
            	android:layout_width="0.5dp"
            	android:layout_height="match_parent"
            	android:background="@color/grey"
            	android:layout_marginTop="@dimen/margin_gap"
            	android:layout_marginBottom="@dimen/margin_gap"
            	/>
         	<TextView 
            android:id="@+id/active_limit_week"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/selection_user_active_seven"
        	android:paddingTop="@dimen/margin_gap_bigger"
        	android:paddingBottom="@dimen/margin_gap_bigger"
        	android:textSize="@dimen/text_size_little"
        	/>
         </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </com.huodong.im.chatdemo.view.UserDefineScrollView>

</LinearLayout>
