<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    <include 
        layout="@layout/search_bar"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_gap_bigger"
            
        >
       
        <TextView
        	android:id="@+id/ktv" 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/ktv"
        	android:drawableTop="@drawable/btype_ktv"
        	android:gravity="center"
        />
        <View 
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/bar" 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/bar"
        	android:gravity="center"
        	android:drawableTop="@drawable/btype_bar"
        />
        <View 
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/other" 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/others"
        	android:gravity="center"
        	android:drawableTop="@drawable/btype_relax"
        />
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginLeft="@dimen/margin_gap_bigger"
        android:layout_marginRight="@dimen/margin_gap_bigger"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_gap_bigger"
        >
        <TextView
            android:id="@+id/nearby_choice" 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="nearby"
        	android:gravity="center"
        	android:textColor="@color/common_botton_bar_blue"
        	android:textSize="@dimen/text_size_hint"
        />
        <View 
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>
        <!-- <TextView
            android:id="@+id/youhui" 
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="youhui"
        	android:gravity="center"
        /> -->
        <CheckBox 
            android:id="@+id/discount_only"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount_only"
            />
    </LinearLayout>
     <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginLeft="@dimen/margin_gap_bigger"
            android:layout_marginRight="@dimen/margin_gap_bigger"/>
      <GridView 
          android:scrollbars="none"
         android:id="@+id/region_gridview"
         android:layout_marginTop="@dimen/margin_gap_bigger"
         android:layout_marginLeft="@dimen/margin_gap_bigger"
         android:layout_marginRight="@dimen/margin_gap_bigger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numColumns="3"
         android:cacheColorHint="@color/transparent"
         android:listSelector="@color/transparent"
         android:verticalSpacing="1.0px" 
        android:horizontalSpacing="1.0px"
         ></GridView>

</LinearLayout>
